done working on #104

--- a/datatags-app/app/views/comps/visibility/typesVisibility.scala.html
+++ b/datatags-app/app/views/comps/visibility/typesVisibility.scala.html
@@ -49,6 +49,7 @@
     case t:AggregateSlot => { @aggregateType(t, path) }
     case t:CompoundSlot => { @compoundType(t, path) }
     case t:ToDoSlot => { @todoType(t, path) }
+      case _ => {}
   }
 }
 
