--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -1,7 +1,8 @@
 @import edu.harvard.iq.datatags.externaltexts.Localization
 @( session:InterviewSession,
    questionNode: edu.harvard.iq.datatags.model.graphs.nodes.AskNode,
-   note:Option[String]
+   note:Option[String],
+   availableLanguage:Seq[String]
 )(implicit req:Request[_], msgs: MessagesProvider)
 
 @scripts = {
@@ -24,6 +25,19 @@
      )
     </div>
   </div>
+  @if(availableLanguage.size > 1) {
+    <div class="row">
+      <div class="col">
+        @Messages("interview.changeLang")
+        <select name="locSelect" id="locSelect" onchange="window.location.href = this.value" style="margin-left: 10px">
+        @for(loc <- availableLanguage) {
+          <option value="@routes.InterviewCtrl.askNode(session.kit.md.id.modelId, session.kit.md.id.version, questionNode.getId, loc)"
+          @if(session.localization.getLanguage == loc) {selected}>@loc </option>
+        }
+        </select>
+      </div>
+    </div>
+  }
 <div class="row">
   <div class="col-md">
       <div class="card m-2">
