--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -2,7 +2,8 @@
 @import edu.harvard.iq.datatags.model.graphs.nodes.RejectNode
 @import Helpers.{o2o, renderMarkdown}
 @(session:InterviewSession,
-  node: RejectNode
+  node: RejectNode,
+  availableLanguage:Seq[String]
 )(implicit req:Request[_], msgs: MessagesProvider)
 
 
@@ -18,6 +19,20 @@
       @comps.rejectPanel(node, session.kit.md.id, session.localization, session.answerHistory, session.kit.md.commentingStatus != CommentingStatus.Closed)
     </div>
   </div>
+  @if(availableLanguage.size > 1) {
+    <div class="row">
+      <div class="col">
+        @Messages("interview.changeLang")
+        <select name="locSelect" id="locSelect" onchange="window.location.href = this.value" style="margin-left: 10px">
+          @for(loc <- availableLanguage) {
+          <option value="@routes.InterviewCtrl.reject(session.kit.md.id.modelId, session.kit.md.id.version, loc)"
+            @if(session.localization.getLanguage == loc) {selected}>@loc </option>
+          }
+        </select>
+      </div>
+    </div>
+  }
+
   <div class="row my-2">
     <div class="col text-center">
       <a href="@routes.InterviewCtrl.transcript(session.kit.md.id.modelId, session.kit.md.id.version, None)" class="btn btn-primary">
