--- a/datatags-app/app/assets/css/rtl.less
+++ b/datatags-app/app/assets/css/rtl.less
@@ -88,3 +88,6 @@ nav.navbar ul.nav {
   border-radius: 0 @inputGroupBorderRadius @inputGroupBorderRadius 0;
 }
 
+.listDisplay {
+  text-align: right;
+}
