--- a/datatags-app/app/views/comps/questionPanel.scala.html
+++ b/datatags-app/app/views/comps/questionPanel.scala.html
@@ -31,10 +31,16 @@
         @if(allowNotes){
           <button type="button" class="toggleNoteBtn" onclick="$('#noteDiv').slideToggle(); $('#noteDiv textarea').focus()"><i class="fa fa-pencil"></i> @Messages("interview.note.add")</button>
         }
-        @for( ans <- questionNode.getAnswers ) {
-          <button type="button" @if(interactive){ class="btn btn-primary"
+        @defining(versionKit.md.listDisplay <= questionNode.getAnswers.size) { listDis =>
+        @if(listDis){<ul class="listDisplay list-unstyled">}
+          @for( ans <- questionNode.getAnswers ) {
+            @if(listDis){<li>}
+            <button type="button" @if(interactive){ class="btn btn-primary"
             onclick="$('#answerText')[0].value='@ans.getAnswerText'; $('#answerForm').submit();"}else{ class="btn btn-outline-primary" disabled} >
-          @loc.localizeAnswer(ans.getAnswerText)</button>
+            @loc.localizeAnswer(ans.getAnswerText)</button>
+            @if(listDis){</li>}
+          }
+          @if(listDis){</ul>}
         }
       </div>
       @if( interactive ) {
