--- a/datatags-app/app/views/backoffice/index.scala.html
+++ b/datatags-app/app/views/backoffice/index.scala.html
@@ -11,9 +11,9 @@
   </div>
   <div class="row my-2">
     <div class="col-md-8">
-      <h3>Recent Comments</h3>
+      <h3>Recent Feedback</h3>
       @if( recentComments.isEmpty ) {
-        <div class="noData">No Comments</div>
+        <div class="noData">No Feedbacks</div>
       } else {
         <table class="table">
           <thead>
