--- a/datatags-app/app/views/backoffice/versionViewer.scala.html
+++ b/datatags-app/app/views/backoffice/versionViewer.scala.html
@@ -1,4 +1,4 @@
-@import edu.harvard.iq.datatags.externaltexts.TrivialLocalization
+@import edu.harvard.iq.policymodels.externaltexts.TrivialLocalization
 @(ver:VersionKit, model:Model, comments:Seq[Comment])(implicit msgs:MessagesProvider)
 
 @scripts ={
