--- a/datatags-app/app/views/comps/author.scala.html
+++ b/datatags-app/app/views/comps/author.scala.html
@@ -1,4 +1,4 @@
-@import edu.harvard.iq.datatags.model.metadata._
+@import edu.harvard.iq.policymodels.model.metadata._
 @(a:AuthorData)
 
 @person( p:PersonAuthorData ) = {
