--- a/datatags-app/app/views/comps/backArrow.scala.html
+++ b/datatags-app/app/views/comps/backArrow.scala.html
@@ -1,2 +1,2 @@
-@(l:edu.harvard.iq.datatags.externaltexts.Localization)
+@(l:edu.harvard.iq.policymodels.externaltexts.Localization)
 @defining( if (l.isRtl)"right" else "left"){ dir => <i class="fa fa-arrow-@dir"></i> }
