--- a/datatags-app/app/views/comps/node.scala.html
+++ b/datatags-app/app/views/comps/node.scala.html
@@ -1,6 +1,5 @@
-@(node: edu.harvard.iq.datatags.model.graphs.nodes.Node)
-
-@import edu.harvard.iq.datatags.model.graphs.nodes._
+@import edu.harvard.iq.policymodels.model.decisiongraph.nodes._
+@(node: edu.harvard.iq.policymodels.model.decisiongraph.nodes.Node)
 
 @askNode( n:AskNode ) = {
   <td class="node node-ask">ask</td>
