--- a/datatags-app/app/views/comps/versionMetadataTable.scala.html
+++ b/datatags-app/app/views/comps/versionMetadataTable.scala.html
@@ -1,4 +1,4 @@
-@import edu.harvard.iq.datatags.model.metadata.PolicyModelData
+@import edu.harvard.iq.policymodels.model.metadata.PolicyModelData
 @(md:PolicyModelData)
 <table class="table">
   <tbody>
