--- a/datatags-app/app/views/comps/visibility/typesVisibility.scala.html
+++ b/datatags-app/app/views/comps/visibility/typesVisibility.scala.html
@@ -1,6 +1,5 @@
-@import edu.harvard.iq.datatags.externaltexts.Localization
-@import edu.harvard.iq.datatags.model.slots.AbstractSlot
-@import edu.harvard.iq.datatags.model.slots._
+@import edu.harvard.iq.policymodels.externaltexts.Localization
+@import edu.harvard.iq.policymodels.model.policyspace.slots._
 @( tagType:AbstractSlot, loc:Localization, form:Form[VersionFormData], versionMD: VersionMD)(implicit msgs:MessagesProvider)
 
 
