--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -1,4 +1,4 @@
-@import edu.harvard.iq.datatags.externaltexts.TrivialLocalization
+@import edu.harvard.iq.policymodels.externaltexts.TrivialLocalization
 @(qKit: VersionKit, interviewWelcomeMessage:Option[String])(implicit req:Request[_], msgs:MessagesProvider)
 
 @scripts = {
