--- a/datatags-app/app/views/interview/showReadme.scala.html
+++ b/datatags-app/app/views/interview/showReadme.scala.html
@@ -1,6 +1,5 @@
-@import edu.harvard.iq.datatags.externaltexts.MarkupString
-@import edu.harvard.iq.datatags.externaltexts.Localization
-@import sun.util.locale.provider.AvailableLanguageTags
+@import edu.harvard.iq.policymodels.externaltexts.MarkupString
+@import edu.harvard.iq.policymodels.externaltexts.Localization
 @( qKit:VersionKit, readme:MarkupString, title:String, subTitle:String, loc:Localization, availableLanguage:Seq[String])(implicit req:Request[_], msgs: MessagesProvider)
 
 @scripts = {
