--- a/datatags-app/app/views/comps/answerHistory.scala.html
+++ b/datatags-app/app/views/comps/answerHistory.scala.html
@@ -1,4 +1,4 @@
-@import edu.harvard.iq.datatags.externaltexts.Localization
+@import edu.harvard.iq.policymodels.externaltexts.Localization
 @(answerHistory: Seq[AnswerRecord], kitKey:KitKey, reverse:Boolean, serializer:Serialization, loc:Localization)(implicit msgs: MessagesProvider)
 @import views.Helpers
 @helper.form( action=routes.InterviewCtrl.revisit(kitKey.modelId, kitKey.version), 'id->"answerHistory") {
