--- a/datatags-app/app/views/comps/tagValue.scala.html
+++ b/datatags-app/app/views/comps/tagValue.scala.html
@@ -1,5 +1,5 @@
-@import edu.harvard.iq.datatags.externaltexts.Localization
-@import edu.harvard.iq.datatags.model.values._
+@import edu.harvard.iq.policymodels.externaltexts.Localization
+@import edu.harvard.iq.policymodels.model.policyspace.values._
 @( aValue: AbstractValue,
    loc:Localization
 )
