--- a/datatags-app/app/views/comps/tagValueDetailed.scala.html
+++ b/datatags-app/app/views/comps/tagValueDetailed.scala.html
@@ -1,7 +1,7 @@
-@import edu.harvard.iq.datatags.externaltexts._
-@import edu.harvard.iq.datatags.model.values._
-@import edu.harvard.iq.datatags.model.slots.AbstractSlot
-@import edu.harvard.iq.datatags.util.PolicySpaceHelper
+@import edu.harvard.iq.policymodels.externaltexts._
+@import edu.harvard.iq.policymodels.model.policyspace.values._
+@import edu.harvard.iq.policymodels.model.policyspace.slots.AbstractSlot
+@import edu.harvard.iq.policymodels.util.PolicySpaceHelper
 
 @( aValue: AbstractValue,
         loc:Localization,
