--- a/datatags-app/app/views/comps/valueAtom.scala.html
+++ b/datatags-app/app/views/comps/valueAtom.scala.html
@@ -1,7 +1,7 @@
-@import edu.harvard.iq.datatags.externaltexts.Localization
-@import edu.harvard.iq.datatags.externaltexts.LocalizationTexts
-@import edu.harvard.iq.datatags.util.PolicySpaceHelper
-@( value : edu.harvard.iq.datatags.model.values.AtomicValue, loc:Localization )
+@import edu.harvard.iq.policymodels.externaltexts.Localization
+@import edu.harvard.iq.policymodels.externaltexts.LocalizationTexts
+@import edu.harvard.iq.policymodels.util.PolicySpaceHelper
+@( value : edu.harvard.iq.policymodels.model.policyspace.values.AtomicValue, loc:Localization )
 @defining(
   Helpers.o2o(loc.getSlotValueText(value))
           .getOrElse( new LocalizationTexts(PolicySpaceHelper.name(value), PolicySpaceHelper.note(value), null))
