--- a/datatags-app/app/views/comps/visibility/slotVisibility.scala.html
+++ b/datatags-app/app/views/comps/visibility/slotVisibility.scala.html
@@ -1,6 +1,6 @@
-@import edu.harvard.iq.datatags.externaltexts.Localization
-@import edu.harvard.iq.datatags.model.slots.AbstractSlot
-@import edu.harvard.iq.datatags.externaltexts.LocalizationTexts
+@import edu.harvard.iq.policymodels.externaltexts.Localization
+@import edu.harvard.iq.policymodels.model.policyspace.slots.AbstractSlot
+@import edu.harvard.iq.policymodels.externaltexts.LocalizationTexts
 @(tp:AbstractSlot, loc:Localization, path:String, explanation:String="")
 @defining(
   Helpers.o2o(loc.getSlotText(tp))
