--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -1,9 +1,9 @@
-@import edu.harvard.iq.datatags.externaltexts.Localization
-@import edu.harvard.iq.datatags.model.values.AtomicValue
-@import edu.harvard.iq.datatags.model.values.AbstractValue
-@import edu.harvard.iq.datatags.model.slots.AbstractSlot
+@import edu.harvard.iq.policymodels.externaltexts.Localization
+@import edu.harvard.iq.policymodels.model.policyspace.values.AtomicValue
+@import edu.harvard.iq.policymodels.model.policyspace.values.AbstractValue
+@import edu.harvard.iq.policymodels.model.policyspace.slots.AbstractSlot
 @( session :InterviewSession,
-   codeTag :Option[edu.harvard.iq.datatags.model.values.AbstractValue],
+   codeTag :Option[edu.harvard.iq.policymodels.model.policyspace.values.AbstractValue],
         topValues:Seq[AbstractValue],
         topSlotsAsValues:Seq[(String, AbstractValue)],
         availableLanguage:Seq[String]
