--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -1,6 +1,6 @@
-@import edu.harvard.iq.datatags.externaltexts.Localization
+@import edu.harvard.iq.policymodels.externaltexts.Localization
 @( session:InterviewSession,
-   questionNode: edu.harvard.iq.datatags.model.graphs.nodes.AskNode,
+   questionNode: edu.harvard.iq.policymodels.model.decisiongraph.nodes.AskNode,
    note:Option[String],
    availableLanguage:Seq[String]
 )(implicit req:Request[_], msgs: MessagesProvider)
