--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -1,5 +1,5 @@
-@import edu.harvard.iq.datatags.externaltexts.Localization
-@import edu.harvard.iq.datatags.model.graphs.nodes.RejectNode
+@import edu.harvard.iq.policymodels.externaltexts.Localization
+@import edu.harvard.iq.policymodels.model.decisiongraph.nodes.RejectNode
 @import Helpers.{o2o, renderMarkdown}
 @(session:InterviewSession,
   node: RejectNode,
