--- a/datatags-app/app/views/tagsTree.scala.html
+++ b/datatags-app/app/views/tagsTree.scala.html
@@ -1,6 +1,6 @@
-@import edu.harvard.iq.datatags.model.values.AbstractValue
-@import edu.harvard.iq.datatags.model.slots.CompoundSlot
-@import edu.harvard.iq.datatags.externaltexts.Localization
+@import edu.harvard.iq.policymodels.model.policyspace.values.AbstractValue
+@import edu.harvard.iq.policymodels.model.policyspace.slots.CompoundSlot
+@import edu.harvard.iq.policymodels.externaltexts.Localization
 @(tagType: CompoundSlot, tagValue:AbstractValue, loc:Localization)(implicit msgs:MessagesProvider)
 
 @templates.bsBase("Tag trees")(){
