small fix related to locs

--- a/datatags-app/app/views/comps/questionPanel.scala.html
+++ b/datatags-app/app/views/comps/questionPanel.scala.html
@@ -11,7 +11,7 @@
     @if( enableComments ) {
       <div>
           @comps.comments("cmnt_" + questionNode.getId.filter(Character.isLetterOrDigit),
-                            versionKit.md.id.modelId, versionKit.md.id.version, loc.getLanguage,
+                            versionKit.md.id.modelId, versionKit.md.id.version, Some(loc.getLanguage),
                             "node", questionNode.getId, "btn-outline-light")
       </div>
     }
