--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -106,7 +106,7 @@
       <h3 class="my-2">
         @if( qKit.md.commentingStatus != CommentingStatus.Closed ) {
         <div class="float-right">
-          @comps.comments("cmnt", qKit.md.id.modelId, qKit.md.id.version, "", "meta", "policy-space")
+          @comps.comments("cmnt", qKit.md.id.modelId, qKit.md.id.version, None, "meta", "policy-space")
         </div>}
         Policy Space
       </h3>
