More screens allowing dynamic language switching (#104)

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -595,7 +595,7 @@ footer {
   .question {
     display: list-item;
     margin-left: 1.5em;
-    list-style-type: decimal;
+    list-style: none;
   }
 }
 
