--- a/datatags-app/app/views/backoffice/versionEditor.scala.html
+++ b/datatags-app/app/views/backoffice/versionEditor.scala.html
@@ -74,11 +74,11 @@
         </div>
           @if(tagType.isDefined && tagType.get != null){
             <div class="form-group row">
-              <label for="publicationStatusSelect" class="col-sm-2 col-form-label">Move to List Display</label>
+              <label for="publicationStatusSelect" class="col-sm-2 col-form-label">Switch to List Display</label>
               <div class="col-sm-10">
                 <input type="number" name="listDisplay" value="@form("listDisplay").value.getOrElse('0')">
                 <small class="form-text text-muted">
-                  questions with this selected number of answers or more will display as a list
+                  When the number of answers is equal or greater than this number, the answers will be displayed as a list.
                 </small>
             </div>
           </div>
