--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -6,7 +6,7 @@
    codeTag :Option[edu.harvard.iq.policymodels.model.policyspace.values.AbstractValue],
         topValues:Seq[AbstractValue],
         topSlotsAsValues:Seq[(String, AbstractValue)],
-        availableLanguage:Seq[String]
+        availableLanguages:Seq[String]
 )(implicit req:Request[_], msgs: MessagesProvider)
 
 @scripts = {
@@ -16,13 +16,21 @@
 }
 
 @extraHead = {
-@if(session.localization.isRtl){
+@whenRTL(session.localization){
   <link rel="stylesheet" href="@routes.Assets.at("css/rtl.min.css")">
 }
 }
 
 
 @templates.bsNavBar("Interview Completed", 'ask, scripts, extraHead) {
+  <div class="row">
+    <div class="col">
+      <div class="d-flex justify-content-end align-items-baseline" style="margin:0 .5rem">
+      @comps.changeLanguageMenu(session.localization, availableLanguages,
+        l=>routes.InterviewCtrl.accept(session.kit.md.id.modelId, session.kit.md.id.version, l))
+      </div>
+    </div>
+  </div>
   <div class="row my-2">
     <div class="col">
       <div class="card">
@@ -30,19 +38,6 @@
           @Messages("interview.completed")
         </div>
         <div class="card-body">
-          @if(availableLanguage.size > 1) {
-            <div class="row">
-              <div class="col">
-                @Messages("interview.changeLang")
-                <select name="locSelect" id="locSelect" onchange="window.location.href = this.value" style="margin-left: 10px">
-                @for(loc <- availableLanguage) {
-                  <option value="@routes.InterviewCtrl.accept(session.kit.md.id.modelId, session.kit.md.id.version, loc)"
-                  @if(session.localization.getLanguage == loc) {selected}>@loc </option>
-                }
-                </select>
-              </div>
-            </div>
-          }
           <ul class="nav nav-tabs" id="resultTabs" role="tablist" style="justify-content: center">
             <li class="nav-item">
               <a class="nav-link active" data-toggle="tab" id="detailedTabTitle" href="#detailedTab">@Messages("interview.report")</a>
